--- a/test.html
+++ b/test.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link   rel = "stylesheet"  href = "css/bootstrap.min.css">
-<script src = "js/jquery-1.11.3.min.js"></script>
-<script src = "js/bootstrap.min.js"></script>
-<script src = "js/transition.js"></script>
-<meta   charset = "utf-8">
-<title>Dynamic Vidgets Library</title>
-<script>
-$(function () { 
-  $('#myModal').modal();
-});
-</script>
+<style>
+input[type="checkbox"] {
+    position: absolute;
+    left: -9999px;
+}
+input[type="checkbox"] + label {
+    background: url(css/check.png) 0 0 no-repeat;
+	background-size: 20px 20px;
+    padding-left: 20px;
+}
+input[type="checkbox"]:checked + label {
+    background-position: 0 -32px;
+}
+</style>
 </head>
 <body>
-<a class="btn" data-toggle="modal" href="#myModal">Запустить пример всплывающего окна</a>
-<div class="modal" id="myModal">
-  <div class="modal-header">
-    <button class="close" data-dismiss="modal">×</button>
-    <h3>Заголовок</h3>
-  </div>
-  <div class="modal-body">
-    <p>Текст…</p>
-  </div>
-  <div class="modal-footer">
-    <a href="#" class="btn">Закрыть</a>
-    <a href="#" class="btn btn-primary">Сохранить</a>
-  </div>
-</div>
+<input type="checkbox" id="checkbox-id" /> 
+<label for="checkbox-id">Some label</label>
 </body>
 </html>
